--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
+    "dev": "node tools/vite-project.mjs dev",
+    "build": "node tools/vite-project.mjs build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "node tools/vite-project.mjs preview"
   },
   "dependencies": {
     "react": "^19.2.0",
