feat: server也根据项目进行匹配

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon server.js",
+    "publish": "node tools/publish.mjs",
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
